# loopforge

./: .gitignore  CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: walkthrough.md
examples/ci-green/: loop.toml
examples/ci-green/memory/: ledger.md
examples/ci-green/prompts/: act.md
examples/ci-green/skills/: project.md
examples/eval-soccer/: README.md  predictions.csv
examples/half-baked/: loop.toml
loopforge/: __init__.py  cli.py  eval.py  linter.py  models.py  report.py  rules.py  runner.py  scaffold.py  schedule.py
scripts/: pr_review_check.sh
tests/: conftest.py  test_cli.py  test_eval.py  test_linter.py  test_models.py  test_rules.py  test_runner.py  test_scaffold.py  test_schedule.py
