[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loopforge"
version = "0.5.3"
description = "Loop Engineering toolkit: lint, scaffold, and run autonomous agent loops against the six blocks a real loop needs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ying Chen" }]
keywords = ["loop-engineering", "ai-agents", "automation", "agentic", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yingchen-coding/loopforge"
Issues = "https://github.com/yingchen-coding/loopforge/issues"

[project.scripts]
loopforge = "loopforge.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8", "build", "twine"]

[tool.setuptools]
packages = ["loopforge"]

[tool.setuptools.package-data]
loopforge = ["templates/*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
